deps/v8/test/message/fail/let-lexical-declaration-in-single-statement.out
*%(basename)s:5: SyntaxError: Lexical declaration cannot appear in a single-statement context
with ({}) let a = [];
          ^^^
SyntaxError: Lexical declaration cannot appear in a single-statement context
